Fix spacing on footer links

--- a/style.css
+++ b/style.css
@@ -204,11 +204,13 @@ body {
 
 #footer a {
     flex-direction: row;
-    justify-content: center;
     font-family: 'Roboto', sans-serif;
     color: #5f6368;
     font-size: 14px;
+    padding-right: 1em;
+    text-decoration: none;
 }
+
 
 
 
